test/errhandling/ferguson/e-inherit-nothrows-throws.good
e-inherit-nothrows-throws.chpl:6: error: conflicting throws for 'D.foo()'
e-inherit-nothrows-throws.chpl:2: error: non-throwing function 'C.foo()'
e-inherit-nothrows-throws.chpl:6: error: overridden by throwing function 'D.foo()'
